<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="15dp"
    android:background="?attr/myBackground"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivItemFamili"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/info_famili_icon"
            app:srcCompat="@drawable/tyrannosauridae"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemFamili"
                style="@style/TextBold.H3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/info_famili_name" />

            <TextView
                android:id="@+id/tvItemReview"
                style="@style/Text.P5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/info_famili_review" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>